<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlayerActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.theoplayer.android.api.THEOplayerView
            android:id="@+id/theoPlayerView"
            android:background="@color/THEOYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:chromeless="true">

        </com.theoplayer.android.api.THEOplayerView>

        <LinearLayout
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:background="@color/THEOGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trickbar"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playPauseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/playIcon" />

            <Button
                android:id="@+id/backwardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/backward" />

            <Button
                android:id="@+id/forwardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/forward" />

            <Button
                android:id="@+id/fbckBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/skipB" />

            <Button
                android:id="@+id/ffwdBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/skipF" />


            <Button
                android:id="@+id/volumeDownBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/volumeDown" />

            <Button
                android:id="@+id/volumeUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/volumeUp" />

            <Button
                android:id="@+id/ccBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/cc" />

            <Button
                android:id="@+id/qualityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/iconSize"
                android:height="@dimen/iconSize"
                android:text="@string/quality" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_marginTop="6dp"
                    android:max="100"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:progress="0">

                </ProgressBar>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:text=""
                    android:textSize="12dp"></TextView>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>